[package]
name = "view-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
log = "0.4"

edge_lib = { git = "https://github.com/GhostMinerPlus/edge_lib.git" }
moon_err = { git = "https://github.com/GhostMinerPlus/moon_err.git" }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
